return conventional time until session
